--- a/DamianResume.tex
+++ b/DamianResume.tex
@@ -131,7 +131,8 @@
     \textbf{\Huge \scshape Damian Diago D'monte} \\ \vspace{4pt}
     \small 506-897-2169 $|$ \href{mailto:x@x.com}{\underline{damiandmonte@gmail.com}} $|$ 
     \href{https://linkedin.com/in/ddmonte}{\underline{linkedin.com/in/ddmonte}} $|$
-    \href{https://github.com/damiandmonte}{\underline{github.com/damiandmonte}}
+    \href{https://github.com/damiandmonte}{\underline{github.com/damiandmonte}} $|$
+    \small Open to \textbf{Relocate}
 \end{center}
 
 
@@ -175,10 +176,11 @@
       {Technology Stack --- C++, GitLab CI/CD, VSCode, Docker, GDB, Linux, Perf, Valgrind}
       \resumeItemListStart
         %%\resumeItem{Researched into shared cache and ELF-based compiled code storage mechanisms for the Eclipse OMR compiler technology.}
+        \resumeItem{Accelerated the execution time of a WebAssembly compiler~(wabtaot) by detecting the overhead causing functionality.}
         \resumeItem{Contributed the shared cache C++ code to the \textbf{open-source} \href{https://github.com/eclipse/omr}{\underline{Eclipse OMR code base.}}}
         \resumeItem{Implemented a generic ELF-based shared object generator, in C++, which stores Eclipse OMR ahead-of-time~(AOT) compiled code.}
-        \resumeItem{Enhanced the WebAssembly compiler~(wabtaot) by presenting a lightweight code storage alternative to store its AOT data.}
-        \resumeItem{Performed analysis on the shared cache and the ELF shared object code containers with metrics like execution like exection speed, memory footprint, I/O utilization, file size, code sharing and concurrency.}
+        \resumeItem{Developed GitLab CI/CD pipelines to automate the build and test processes.}
+        \resumeItem{Conducted performance analysis of the shared cache and the ELF shared object code containers on metrics like execution speed, memory footprint, I/O utilization, file size, code sharing and concurrency.}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -226,9 +228,9 @@
             \resumeItem{Predicted the Nominal GDP~(of Canada) for the years 2018, 2019 and 2020 with 95\%+ accuracy.}
           \resumeItemListEnd
          \resumeProjectHeading
-          {\textbf{DaskDB Cost Based Optimizer} $|$ \emph{Python, Pandas, DaskDB}}{Jan 2020 -- Apr 2020}
+          {\textbf{Cost Based Optimizer for a Big Data/Data Science System} $|$ \emph{Python, Pandas, DaskDB}}{Jan 2020 -- Apr 2020}
           \resumeItemListStart
-            \resumeItem{Researched into cost based optimzers and created a prototype for the DaskDB data science system.}
+            \resumeItem{Researched into cost based optimzers and created a prototype of it for the DaskDB data science system.}
             \resumeItem{Developed a statsGather utility using Python and Pandas to gather different types of database statistics.}
             \resumeItem{Implemented the functionality to generate physical plans from a logical plan, and calculated the cost of each plan.}
             %\resumeItem{Performed evaluation using the TPC-H benchmark.}
